--- a/src/index.css
+++ b/src/index.css
@@ -14,11 +14,11 @@ code {
     monospace;
 }
 .file-header {
-  margin: 1.5rem;
+  margin: 1.5rem auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 90vw;
+  width: 85vw;
 }
 .file-header h1 {
   color: rgb(75, 74, 74);
@@ -84,7 +84,7 @@ code {
   height: 100%;
   width: 100%;
   background-color: rgb(0, 0, 0);
-  opacity: 0.85;
+  opacity: 0.9;
   z-index: 0;
   overflow: hidden;
 }
@@ -94,4 +94,7 @@ code {
 .file {
   display: flex;
   justify-content: space-between;
+  width: 85vw;
+  align-items: center;
+  margin: 1.5rem auto;
 }
