--- a/src/index.css
+++ b/src/index.css
@@ -49,13 +49,11 @@ code {
 
 .createPopUp {
   position: fixed;
-  margin-top: -9vh;
-  margin-left: -17.5vw;
-  top: 50%;
-  left: 50%;
+  top: 5rem;
+  left: 23%;
   height: 18vw;
   width: 35vw;
-  min-height: 350px;
+  min-height: 250px;
   min-width: 250px;
   margin: auto auto;
   background-color: rgb(255, 255, 255);
